updated css to ensure the image remains in place while the content overflow is scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,10 @@ body::before {
   z-index: -1;
   background: linear-gradient(to bottom, #070707 0%, #1f1f1f 50%, #070707 100%);
 }
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
